hphp/test/zend/good/ext/gd/tests/imagefilter.php.skipif
<?php
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}
	if (!function_exists("imagefilter")) die("skip requires bundled GD library\n");
?>